# qtrade

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
api/console/: README.md
api/gateway/: README.md
cmake/: cpputils.cmake  qtrade-config.cmake  qtrade_install.cmake  qtrade_paths.cmake
cmake/app/: qtrade_engine.cmake  qtrade_services.cmake
cmake/app/services/: qtrade_audit_service.cmake  qtrade_backtest_service.cmake  qtrade_backup_service.cmake  qtrade_config_service.cmake  qtrade_history_order_service.cmake  qtrade_log_service.cmake  qtrade_monitor_service.cmake  qtrade_registry_service.cmake  qtrade_strategy_service.cmake
cmake/lib/: qtrade_common.cmake  qtrade_core.cmake  qtrade_proto.cmake
config/: config_service.json  engine.json
demo/config/: config_service.json
demo/strategy/: example_strategy.cpp  example_strategy.hpp
docs/: Architecture.md  Guide.md  deploy.md
include/adapter/: execution_adapter.h  market_source.h
include/client/: config_client.h  log_client.h  monitor_client.h  registry_client.h
include/common/: bar_data.h  constants.h  error_code.h  order.h  tick_data.h
include/engine/: account_manager.h  compliance_manager.h  event_bus.h  execution_manager.h  market_handler.h  order_manager.h  position_manager.h  risk_manager.h  strategy_engine.h  trading_engine.h
include/qtrade/: domain.hpp
include/qtrade/adapter/: execution_adapter.hpp  market_source.hpp
include/qtrade/client/: config_client.hpp  log_client.hpp  monitor_client.hpp  registry_client.hpp  report_priority.hpp
include/qtrade/core/: result.hpp
include/qtrade/engine/: account_manager.hpp  compliance_manager.hpp  engine_config_loader.hpp  event_bus.hpp  execution_manager.hpp  market_handler.hpp  order_manager.hpp  position_manager.hpp  risk_manager.hpp  strategy_engine.hpp  trading_engine.hpp
include/qtrade/error_code/: code_define.hpp  code_message.hpp  code_segment.hpp  error_code.hpp  error_codes.hpp
include/qtrade/strategy/: strategy.hpp
include/qtrade/structs/: bar_data.hpp  constants.hpp  error_code.hpp  order.hpp  result.hpp  tick_data.hpp
include/qtrade_sdk/: sdk.hpp
include/qtrade_sdk/constants/: constants.hpp
include/qtrade_sdk/define/: constants.hpp  quote_types.hpp  trader_types.hpp
include/qtrade_sdk/quote/: quote_api.hpp  quote_spi.hpp  quote_struct.hpp  quote_types.hpp
include/qtrade_sdk/struct/: fund_struct.hpp  quote_struct.hpp  trader_struct.hpp
include/qtrade_sdk/trader/: fund_struct.hpp  trader_api.hpp  trader_spi.hpp  trader_struct.hpp  trader_types.hpp
include/quant-trading/adapter/: execution_adapter.hpp  market_source.hpp
include/quant-trading/client/: config_client.hpp  log_client.hpp  monitor_client.hpp  registry_client.hpp
include/quant-trading/engine/: compliance_manager.hpp  order_manager.hpp  position_manager.hpp  trading_engine.hpp
include/quant-trading/strategy/: strategy.hpp
include/quant-trading/structs/: constants.hpp  error_code.hpp
include/strategy/: strategy.h
include/structs/: tick_data.h
service/config_service/: config_service.h
src/: main.cpp
src/adapter/executor/: mock_execution_adapter.cpp
src/adapter/market/: mock_market_source.cpp
src/apps/qtrade_audit_service/: main.cpp
src/apps/qtrade_backtest_service/: main.cpp
src/apps/qtrade_backup_service/: main.cpp
src/apps/qtrade_config_service/: main.cpp
src/apps/qtrade_engine/: main.cpp
src/apps/qtrade_history_order_service/: main.cpp
src/apps/qtrade_log_service/: main.cpp
src/apps/qtrade_monitor_service/: main.cpp
src/apps/qtrade_registry_service/: main.cpp
src/apps/qtrade_strategy_service/: main.cpp
src/client/common/: outbound_worker.cpp  outbound_worker.hpp  report_priority.hpp
src/client/config_client/: config_client.cpp  config_client.hpp
src/client/log_client/: log_client.cpp  log_client.hpp
src/client/monitor_client/: monitor_client.cpp  monitor_client.hpp
src/client/registry_client/: registry_client.cpp
src/common/: app_runner.cpp  app_runner.hpp  logger.cpp  logger.hpp  service_main.hpp
src/common/app/: app_runner.cpp  app_runner.hpp
src/common/grpc/: call_data_base.hpp  completion_queue_loop.cpp  completion_queue_loop.hpp  grpc_async_server.cpp  grpc_async_server.hpp
src/common/logging/: logger.cpp  logger.hpp
src/core/: main.cpp
src/core/ems/: execution_adapter.h
src/core/event_bus/: event_bus.h
src/core/market_data/: market_data_processor.h
src/core/strategy/: strategy_base.h  strategy_engine.h
src/engine/: engine_config_loader.cpp  engine_config_loader.hpp  engine_options.hpp  trading_engine.cpp  trading_engine.hpp
src/engine/account/: account_manager.cpp  account_manager.hpp
src/engine/cms/: compliance_manager.cpp  compliance_manager.hpp
src/engine/ems/: execution_manager.cpp  execution_manager.hpp
src/engine/event_bus/: event_bus.cpp  event_bus.hpp  event_lanes.cpp  event_lanes.hpp  event_reactor_loop.hpp  event_types.hpp  market_event_reactor.cpp  market_event_reactor.hpp  return_event_reactor.cpp  return_event_reactor.hpp
src/engine/market/: market_handler.cpp  market_handler.hpp
src/engine/normalizer/: quote_normalizer.cpp  quote_normalizer.hpp  trader_normalizer.cpp  trader_normalizer.hpp
src/engine/oms/: order_manager.cpp  order_manager.hpp
src/engine/position/: position_manager.cpp  position_manager.hpp
src/engine/risk/: risk_manager.cpp  risk_manager.hpp
src/engine/strategy/: strategy_engine.cpp  strategy_engine.hpp
src/plugins/data_sources/: idata_source.h
src/public/error_code/: code_message.cpp
src/qtrade/: code_message.cpp
src/service/log_service/: main_stub.cpp
test/: CMakeLists.txt
test/adapter/: adapter_smoke_test.cpp
test/base/safe_queue/: test_safe_queue.cpp
test/base/thread_pool/: test_thread_pool.cpp
test/client/: client_smoke_test.cpp  test_client_smoke.cpp
test/engine/: smoke_test.cpp  test_engine_smoke.cpp  test_event_bus_lane.cpp
test/quote/: test_quote_smoke.cpp
test/service/: service_smoke_test.cpp
test/strategy/: strategy_smoke_test.cpp  test_strategy_smoke.cpp
test/trader/: test_trader_smoke.cpp
(+38 files in other folders)
