
# Output Directories
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test/bin)

# Dependencies
find_package(GTest 1.14.0 REQUIRED)

# Source Files
file(GLOB_RECURSE ALL_TEST_FILES CONFIGURE_DEPENDS "*.cpp")

# Build Executable
add_executable(qtrade_tests ${ALL_TEST_FILES})

# Include Directories
target_include_directories(qtrade_tests PRIVATE
    ${CMAKE_SOURCE_DIR}/src
    ${CMAKE_SOURCE_DIR}/demo
)

# Link Libraries
target_link_libraries(qtrade_tests PRIVATE
    qtrade_core
    GTest::gtest
    GTest::gtest_main
)

# Discover and Run Tests
include(GoogleTest)
gtest_discover_tests(qtrade_tests
    PROPERTIES
        LABELS "unit"
        DISCOVERY_TIMEOUT 60
)
